removed too much

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -11,8 +11,27 @@ body {
   text-align: center;
 }
 
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 3rem;
+}
+
 a {
   color: black;
+}
+
+p {
+  margin: 1rem 0;
+}
+
+.w {
+  width: fit-content;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 4rem 2rem;
 }
 
 figcaption {
