--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -10,7 +10,7 @@ html {
 
 body {
   color: black;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   line-height: 1.3;
   margin: 0;
   min-height: 100%;
@@ -23,10 +23,16 @@ h4,
 h5,
 h6 {
   margin-top: 3rem;
+  font-weight: normal;
 }
 
-a {
+h1 {
+  font-size: 1.6rem;
+}
+
+h3 a {
   color: black;
+  text-decoration: none;
 }
 
 p {
@@ -37,17 +43,21 @@ p {
   width: fit-content;
   max-width: 800px;
   margin: 0 auto;
-  padding: 4rem 2rem;
+  padding: 2rem 2rem;
 }
 
 figcaption {
   color: rgb(99, 99, 99);
   text-align: center;
-  font-size: 80%;
+  font-size: 0.6rem;
 }
 
 img {
   max-width: 100%;
   display: block;
   margin: 0 auto;
+}
+
+li {
+  list-style: none;
 }
