--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -30,7 +30,7 @@ h1 {
   font-size: 1.6rem;
 }
 
-h3 a {
+a {
   color: black;
   text-decoration: none;
 }
@@ -58,6 +58,12 @@ img {
   margin: 0 auto;
 }
 
+ul,
 li {
   list-style: none;
+  padding: 0;
+}
+
+figure {
+  margin: 2rem 0;
 }
