--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -49,7 +49,8 @@ p {
 figcaption {
   color: rgb(99, 99, 99);
   text-align: center;
-  font-size: 0.6rem;
+  padding-top: 0.2rem;
+  font-size: 0.5rem;
 }
 
 img {
